# sdk-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json
cmake/: sdk-cpp-config.cmake.in
docs/: discovery.md  getting-started.md  local-store.md  metadata.md  sync.md
examples/: 01_local_store.cpp  02_persistent_store.cpp  03_remove_value.cpp  04_basic_sync.cpp  05_tcp_peer_sync.cpp  06_discovery.cpp  07_node_metadata.cpp
include/softadastra/: sdk.hpp
include/softadastra/sdk/: Client.hpp  ClientOptions.hpp  Error.hpp  Key.hpp  NodeInfo.hpp  Peer.hpp  Result.hpp  SyncResult.hpp  TickResult.hpp  Value.hpp
src/: Client.cpp  ClientOptions.cpp  Error.cpp
src/conversions/: DiscoveryConversions.cpp  MetadataConversions.cpp  StoreConversions.cpp  SyncConversions.cpp  TransportConversions.cpp
tests/: CMakeLists.txt  ClientOptionsTests.cpp  ClientTests.cpp  ResultTests.cpp
